# internal/handler/user_handler.go
@@ -25,3 +25,21 @@ func (h *Handler) Profile(c *gin.Context) {
 	response := utils.SuccessResponse("show profile success", http.StatusOK, formattedUser)
 	c.JSON(http.StatusOK, response)
 }
+
+func (h *Handler) Cards(c *gin.Context) {
+	user := c.MustGet("user").(*model.User)
+	input := &dto.CardsBody{}
+	err := c.ShouldBindJSON(input)
+	if err != nil {
+		errors := utils.FormatValidationError(err)
+		response := utils.ErrorResponse("transfer failed", http.StatusUnprocessableEntity, errors)
+		c.JSON(http.StatusUnprocessableEntity, response)
+		return
+	}
+	card, err := h.userService.SaveCard(input.CardNumber, user.ID)
+	if err != nil {
+		return
+	}
+	response := utils.SuccessResponse("show new card", http.StatusOK, card)
+	c.JSON(http.StatusOK, response)
+}
