# internal/route/user_route.go
@@ -8,4 +8,5 @@ import (
 
 func (r *Router) User(route *gin.RouterGroup, h *handler.Handler) {
 	route.GET("/profiles", middleware.AuthMiddleware(r.jwtService, r.userService), h.Profile)
+	route.POST("/cards", middleware.AuthMiddleware(r.jwtService, r.userService), h.Cards)
 }
